--- a/SlunchevIzgrev/appsettings.json
+++ b/SlunchevIzgrev/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SlunchevIzgrev-6018ff75-d580-4cd3-85dc-47e9c4e44994;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SlunchevIzgrev;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
